--- a/notebooks/CIFAR10-Full-Notebook.ipynb
+++ b/notebooks/CIFAR10-Full-Notebook.ipynb
@@ -7088,7 +7088,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "80a45e39",
+   "id": "db050d4a",
    "metadata": {},
    "outputs": [
     {
@@ -8073,7 +8073,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "cef7b852",
+   "id": "02d0da69",
    "metadata": {},
    "outputs": [
     {
@@ -8099,7 +8099,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "184b006b",
+   "id": "e7cf224e",
    "metadata": {},
    "outputs": [
     {
@@ -8217,7 +8217,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "3ad7c4d0",
+   "id": "44600d15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8232,8 +8232,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "2958fc69",
+   "execution_count": 58,
+   "id": "51ab051f",
    "metadata": {},
    "outputs": [
     {
@@ -8331,7 +8331,221 @@
       "Epoch 5/400\n",
       "782/782 [==============================] - 11s 14ms/step - loss: 1.8830 - accuracy: 0.2539 - val_loss: 1.8790 - val_accuracy: 0.2683\n",
       "Epoch 6/400\n",
-      "386/782 [=============>................] - ETA: 5s - loss: 1.8386 - accuracy: 0.2701"
+      "782/782 [==============================] - 11s 14ms/step - loss: 1.8315 - accuracy: 0.2760 - val_loss: 1.9134 - val_accuracy: 0.2608\n",
+      "Epoch 7/400\n",
+      "782/782 [==============================] - 11s 14ms/step - loss: 1.7909 - accuracy: 0.2928 - val_loss: 1.7945 - val_accuracy: 0.3007\n",
+      "Epoch 8/400\n",
+      "782/782 [==============================] - 11s 14ms/step - loss: 1.7526 - accuracy: 0.3114 - val_loss: 1.6832 - val_accuracy: 0.3502\n",
+      "Epoch 9/400\n",
+      "782/782 [==============================] - 11s 14ms/step - loss: 1.7223 - accuracy: 0.3227 - val_loss: 1.6769 - val_accuracy: 0.3495\n",
+      "Epoch 10/400\n",
+      "782/782 [==============================] - 11s 14ms/step - loss: 1.6995 - accuracy: 0.3349 - val_loss: 1.6569 - val_accuracy: 0.3549\n",
+      "Epoch 11/400\n",
+      "782/782 [==============================] - 12s 15ms/step - loss: 1.6744 - accuracy: 0.3470 - val_loss: 1.6275 - val_accuracy: 0.3704\n",
+      "Epoch 12/400\n",
+      "782/782 [==============================] - 11s 15ms/step - loss: 1.6507 - accuracy: 0.3591 - val_loss: 1.6343 - val_accuracy: 0.3709\n",
+      "Epoch 13/400\n",
+      "782/782 [==============================] - 11s 14ms/step - loss: 1.6291 - accuracy: 0.3668 - val_loss: 1.5884 - val_accuracy: 0.3887\n",
+      "Epoch 14/400\n",
+      "782/782 [==============================] - 11s 14ms/step - loss: 1.6085 - accuracy: 0.3781 - val_loss: 1.5156 - val_accuracy: 0.4258\n",
+      "Epoch 15/400\n",
+      "782/782 [==============================] - 11s 15ms/step - loss: 1.5943 - accuracy: 0.3862 - val_loss: 1.5204 - val_accuracy: 0.4205\n",
+      "Epoch 16/400\n",
+      "782/782 [==============================] - 11s 15ms/step - loss: 1.5741 - accuracy: 0.3957 - val_loss: 1.5850 - val_accuracy: 0.3986\n",
+      "Epoch 17/400\n",
+      "782/782 [==============================] - 12s 15ms/step - loss: 1.5537 - accuracy: 0.4075 - val_loss: 1.4884 - val_accuracy: 0.4377\n",
+      "Epoch 18/400\n",
+      "782/782 [==============================] - 11s 14ms/step - loss: 1.5284 - accuracy: 0.4218 - val_loss: 1.4190 - val_accuracy: 0.4608\n",
+      "Epoch 19/400\n",
+      "782/782 [==============================] - 11s 14ms/step - loss: 1.5066 - accuracy: 0.4330 - val_loss: 1.4116 - val_accuracy: 0.4761\n",
+      "Epoch 20/400\n",
+      "782/782 [==============================] - 12s 15ms/step - loss: 1.4844 - accuracy: 0.4412 - val_loss: 1.3920 - val_accuracy: 0.4801\n",
+      "Epoch 21/400\n",
+      "782/782 [==============================] - 11s 14ms/step - loss: 1.4585 - accuracy: 0.4541 - val_loss: 1.3520 - val_accuracy: 0.4953\n",
+      "Epoch 22/400\n",
+      "782/782 [==============================] - 11s 14ms/step - loss: 1.4430 - accuracy: 0.4637 - val_loss: 1.3470 - val_accuracy: 0.5051\n",
+      "Epoch 23/400\n",
+      "782/782 [==============================] - 12s 15ms/step - loss: 1.4199 - accuracy: 0.4719 - val_loss: 1.2664 - val_accuracy: 0.5307\n",
+      "Epoch 24/400\n",
+      "782/782 [==============================] - 12s 15ms/step - loss: 1.4004 - accuracy: 0.4825 - val_loss: 1.2550 - val_accuracy: 0.5429\n",
+      "Epoch 25/400\n",
+      "782/782 [==============================] - 11s 14ms/step - loss: 1.3800 - accuracy: 0.4905 - val_loss: 1.2895 - val_accuracy: 0.5199\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 26/400\n",
+      "782/782 [==============================] - 11s 14ms/step - loss: 1.3691 - accuracy: 0.4978 - val_loss: 1.2479 - val_accuracy: 0.5407\n",
+      "Epoch 27/400\n",
+      "782/782 [==============================] - 11s 14ms/step - loss: 1.3488 - accuracy: 0.5067 - val_loss: 1.2819 - val_accuracy: 0.5370\n",
+      "Epoch 28/400\n",
+      "782/782 [==============================] - 12s 15ms/step - loss: 1.3283 - accuracy: 0.5153 - val_loss: 1.2890 - val_accuracy: 0.5291\n",
+      "Epoch 29/400\n",
+      "782/782 [==============================] - 11s 15ms/step - loss: 1.3172 - accuracy: 0.5194 - val_loss: 1.2027 - val_accuracy: 0.5590\n",
+      "Epoch 30/400\n",
+      "782/782 [==============================] - 11s 14ms/step - loss: 1.2972 - accuracy: 0.5266 - val_loss: 1.1699 - val_accuracy: 0.5763\n",
+      "Epoch 31/400\n",
+      "782/782 [==============================] - 11s 14ms/step - loss: 1.2892 - accuracy: 0.5314 - val_loss: 1.1474 - val_accuracy: 0.5799\n",
+      "Epoch 32/400\n",
+      "782/782 [==============================] - 11s 14ms/step - loss: 1.2717 - accuracy: 0.5402 - val_loss: 1.2236 - val_accuracy: 0.5624\n",
+      "Epoch 33/400\n",
+      "782/782 [==============================] - 12s 15ms/step - loss: 1.2697 - accuracy: 0.5444 - val_loss: 1.1798 - val_accuracy: 0.5777\n",
+      "Epoch 34/400\n",
+      "782/782 [==============================] - 11s 14ms/step - loss: 1.2476 - accuracy: 0.5476 - val_loss: 1.1450 - val_accuracy: 0.5790\n",
+      "Epoch 35/400\n",
+      "782/782 [==============================] - 12s 15ms/step - loss: 1.2412 - accuracy: 0.5572 - val_loss: 1.2274 - val_accuracy: 0.5619\n",
+      "Epoch 36/400\n",
+      "782/782 [==============================] - 11s 15ms/step - loss: 1.2266 - accuracy: 0.5563 - val_loss: 1.1190 - val_accuracy: 0.5927\n",
+      "Epoch 37/400\n",
+      "782/782 [==============================] - 11s 14ms/step - loss: 1.2127 - accuracy: 0.5618 - val_loss: 1.1347 - val_accuracy: 0.5922\n",
+      "Epoch 38/400\n",
+      "782/782 [==============================] - 11s 14ms/step - loss: 1.2023 - accuracy: 0.5683 - val_loss: 1.1291 - val_accuracy: 0.5958\n",
+      "Epoch 39/400\n",
+      "782/782 [==============================] - 12s 15ms/step - loss: 1.1947 - accuracy: 0.5741 - val_loss: 1.0976 - val_accuracy: 0.5998\n",
+      "Epoch 40/400\n",
+      "782/782 [==============================] - 11s 15ms/step - loss: 1.1929 - accuracy: 0.5736 - val_loss: 1.0810 - val_accuracy: 0.6164\n",
+      "Epoch 41/400\n",
+      "782/782 [==============================] - 11s 14ms/step - loss: 1.1807 - accuracy: 0.5777 - val_loss: 1.0849 - val_accuracy: 0.6061\n",
+      "Epoch 42/400\n",
+      "782/782 [==============================] - 11s 14ms/step - loss: 1.1701 - accuracy: 0.5811 - val_loss: 1.0231 - val_accuracy: 0.6284\n",
+      "Epoch 43/400\n",
+      "782/782 [==============================] - 11s 14ms/step - loss: 1.1644 - accuracy: 0.5831 - val_loss: 1.1029 - val_accuracy: 0.5957\n",
+      "Epoch 44/400\n",
+      "782/782 [==============================] - 11s 14ms/step - loss: 1.1516 - accuracy: 0.5886 - val_loss: 1.0984 - val_accuracy: 0.6045\n",
+      "Epoch 45/400\n",
+      "782/782 [==============================] - 11s 14ms/step - loss: 1.1365 - accuracy: 0.5957 - val_loss: 1.0339 - val_accuracy: 0.6298\n",
+      "Epoch 46/400\n",
+      "782/782 [==============================] - 11s 14ms/step - loss: 1.1304 - accuracy: 0.5960 - val_loss: 1.0066 - val_accuracy: 0.6367\n",
+      "Epoch 47/400\n",
+      "782/782 [==============================] - 11s 14ms/step - loss: 1.1268 - accuracy: 0.5992 - val_loss: 1.0193 - val_accuracy: 0.6324\n",
+      "Epoch 48/400\n",
+      "782/782 [==============================] - 11s 14ms/step - loss: 1.1191 - accuracy: 0.6018 - val_loss: 0.9993 - val_accuracy: 0.6333\n",
+      "Epoch 49/400\n",
+      "782/782 [==============================] - 11s 14ms/step - loss: 1.1187 - accuracy: 0.6024 - val_loss: 1.0128 - val_accuracy: 0.6343\n",
+      "Epoch 50/400\n",
+      "782/782 [==============================] - 11s 14ms/step - loss: 1.1044 - accuracy: 0.6077 - val_loss: 1.0191 - val_accuracy: 0.6273\n",
+      "Epoch 51/400\n",
+      "782/782 [==============================] - 11s 15ms/step - loss: 1.1067 - accuracy: 0.6082 - val_loss: 1.0246 - val_accuracy: 0.6310\n",
+      "Epoch 52/400\n",
+      "782/782 [==============================] - 11s 14ms/step - loss: 1.0966 - accuracy: 0.6105 - val_loss: 0.9759 - val_accuracy: 0.6487\n",
+      "Epoch 53/400\n",
+      "782/782 [==============================] - 11s 15ms/step - loss: 1.0839 - accuracy: 0.6141 - val_loss: 0.9527 - val_accuracy: 0.6581\n",
+      "Epoch 54/400\n",
+      "782/782 [==============================] - 11s 14ms/step - loss: 1.0823 - accuracy: 0.6179 - val_loss: 0.9542 - val_accuracy: 0.6577\n",
+      "Epoch 55/400\n",
+      "782/782 [==============================] - 11s 14ms/step - loss: 1.0759 - accuracy: 0.6184 - val_loss: 1.0602 - val_accuracy: 0.6207\n",
+      "Epoch 56/400\n",
+      "782/782 [==============================] - 11s 15ms/step - loss: 1.0724 - accuracy: 0.6215 - val_loss: 0.9556 - val_accuracy: 0.6574\n",
+      "Epoch 57/400\n",
+      "782/782 [==============================] - 11s 14ms/step - loss: 1.0643 - accuracy: 0.6244 - val_loss: 0.9281 - val_accuracy: 0.6637\n",
+      "Epoch 58/400\n",
+      "782/782 [==============================] - 11s 14ms/step - loss: 1.0592 - accuracy: 0.6258 - val_loss: 0.9489 - val_accuracy: 0.6565\n",
+      "Epoch 59/400\n",
+      "782/782 [==============================] - 11s 14ms/step - loss: 1.0530 - accuracy: 0.6254 - val_loss: 0.9334 - val_accuracy: 0.6598\n",
+      "Epoch 60/400\n",
+      "782/782 [==============================] - 11s 14ms/step - loss: 1.0442 - accuracy: 0.6300 - val_loss: 0.9586 - val_accuracy: 0.6540\n",
+      "Epoch 61/400\n",
+      "782/782 [==============================] - 11s 14ms/step - loss: 1.0438 - accuracy: 0.6314 - val_loss: 0.9189 - val_accuracy: 0.6674\n",
+      "Epoch 62/400\n",
+      "782/782 [==============================] - 11s 14ms/step - loss: 1.0430 - accuracy: 0.6320 - val_loss: 0.9314 - val_accuracy: 0.6628\n",
+      "Epoch 63/400\n",
+      "782/782 [==============================] - 11s 15ms/step - loss: 1.0312 - accuracy: 0.6349 - val_loss: 0.9126 - val_accuracy: 0.6730\n",
+      "Epoch 64/400\n",
+      "782/782 [==============================] - 11s 14ms/step - loss: 1.0236 - accuracy: 0.6387 - val_loss: 0.9403 - val_accuracy: 0.6654\n",
+      "Epoch 65/400\n",
+      "782/782 [==============================] - 11s 15ms/step - loss: 1.0249 - accuracy: 0.6396 - val_loss: 0.9214 - val_accuracy: 0.6732\n",
+      "Epoch 66/400\n",
+      "782/782 [==============================] - 11s 14ms/step - loss: 1.0192 - accuracy: 0.6447 - val_loss: 0.8932 - val_accuracy: 0.6772\n",
+      "Epoch 67/400\n",
+      "782/782 [==============================] - 11s 14ms/step - loss: 1.0129 - accuracy: 0.6439 - val_loss: 0.9350 - val_accuracy: 0.6715\n",
+      "Epoch 68/400\n",
+      "782/782 [==============================] - 11s 14ms/step - loss: 1.0082 - accuracy: 0.6457 - val_loss: 0.8953 - val_accuracy: 0.6816\n",
+      "Epoch 69/400\n",
+      "782/782 [==============================] - 11s 14ms/step - loss: 1.0095 - accuracy: 0.6433 - val_loss: 0.8832 - val_accuracy: 0.6814\n",
+      "Epoch 70/400\n",
+      "782/782 [==============================] - 11s 14ms/step - loss: 0.9973 - accuracy: 0.6495 - val_loss: 0.8822 - val_accuracy: 0.6853\n",
+      "Epoch 71/400\n",
+      "782/782 [==============================] - 12s 15ms/step - loss: 0.9943 - accuracy: 0.6502 - val_loss: 0.9012 - val_accuracy: 0.6744\n",
+      "Epoch 72/400\n",
+      "782/782 [==============================] - 11s 14ms/step - loss: 0.9966 - accuracy: 0.6503 - val_loss: 0.9536 - val_accuracy: 0.6583\n",
+      "Epoch 73/400\n",
+      "782/782 [==============================] - 12s 15ms/step - loss: 0.9842 - accuracy: 0.6522 - val_loss: 0.8767 - val_accuracy: 0.6885\n",
+      "Epoch 74/400\n",
+      "782/782 [==============================] - 12s 15ms/step - loss: 0.9786 - accuracy: 0.6561 - val_loss: 0.8856 - val_accuracy: 0.6873\n",
+      "Epoch 75/400\n",
+      "782/782 [==============================] - 11s 15ms/step - loss: 0.9843 - accuracy: 0.6554 - val_loss: 0.8625 - val_accuracy: 0.6876\n",
+      "Epoch 76/400\n",
+      "782/782 [==============================] - 11s 14ms/step - loss: 0.9690 - accuracy: 0.6588 - val_loss: 0.8671 - val_accuracy: 0.6916\n",
+      "Epoch 77/400\n",
+      "782/782 [==============================] - 11s 15ms/step - loss: 0.9776 - accuracy: 0.6580 - val_loss: 0.8648 - val_accuracy: 0.6948\n",
+      "Epoch 78/400\n",
+      "782/782 [==============================] - 11s 15ms/step - loss: 0.9720 - accuracy: 0.6575 - val_loss: 0.8655 - val_accuracy: 0.6942\n",
+      "Epoch 79/400\n",
+      "782/782 [==============================] - 11s 15ms/step - loss: 0.9591 - accuracy: 0.6636 - val_loss: 0.8369 - val_accuracy: 0.7012\n",
+      "Epoch 80/400\n",
+      "782/782 [==============================] - 11s 14ms/step - loss: 0.9538 - accuracy: 0.6615 - val_loss: 0.8518 - val_accuracy: 0.6946\n",
+      "Epoch 81/400\n",
+      "782/782 [==============================] - 11s 15ms/step - loss: 0.9532 - accuracy: 0.6644 - val_loss: 0.8329 - val_accuracy: 0.7053\n",
+      "Epoch 82/400\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "782/782 [==============================] - 12s 15ms/step - loss: 0.9517 - accuracy: 0.6675 - val_loss: 0.8515 - val_accuracy: 0.6961\n",
+      "Epoch 83/400\n",
+      "782/782 [==============================] - 12s 15ms/step - loss: 0.9484 - accuracy: 0.6687 - val_loss: 0.8432 - val_accuracy: 0.7021\n",
+      "Epoch 84/400\n",
+      "782/782 [==============================] - 11s 14ms/step - loss: 0.9461 - accuracy: 0.6683 - val_loss: 0.8428 - val_accuracy: 0.6989\n",
+      "Epoch 85/400\n",
+      "782/782 [==============================] - 11s 15ms/step - loss: 0.9491 - accuracy: 0.6699 - val_loss: 0.8675 - val_accuracy: 0.6951\n",
+      "Epoch 86/400\n",
+      "782/782 [==============================] - 11s 14ms/step - loss: 0.9401 - accuracy: 0.6704 - val_loss: 0.8293 - val_accuracy: 0.7073\n",
+      "Epoch 87/400\n",
+      "782/782 [==============================] - 11s 14ms/step - loss: 0.9311 - accuracy: 0.6749 - val_loss: 0.8220 - val_accuracy: 0.7122\n",
+      "Epoch 88/400\n",
+      "782/782 [==============================] - 11s 14ms/step - loss: 0.9341 - accuracy: 0.6738 - val_loss: 0.8217 - val_accuracy: 0.7058\n",
+      "Epoch 89/400\n",
+      "782/782 [==============================] - 11s 14ms/step - loss: 0.9313 - accuracy: 0.6753 - val_loss: 0.8351 - val_accuracy: 0.7055\n",
+      "Epoch 90/400\n",
+      "782/782 [==============================] - 11s 13ms/step - loss: 0.9219 - accuracy: 0.6787 - val_loss: 0.8133 - val_accuracy: 0.7123\n",
+      "Epoch 91/400\n",
+      "782/782 [==============================] - 11s 14ms/step - loss: 0.9210 - accuracy: 0.6796 - val_loss: 0.8004 - val_accuracy: 0.7170\n",
+      "Epoch 92/400\n",
+      "782/782 [==============================] - 11s 14ms/step - loss: 0.9181 - accuracy: 0.6796 - val_loss: 0.7993 - val_accuracy: 0.7210\n",
+      "Epoch 93/400\n",
+      "782/782 [==============================] - 11s 14ms/step - loss: 0.9078 - accuracy: 0.6860 - val_loss: 0.7976 - val_accuracy: 0.7198\n",
+      "Epoch 94/400\n",
+      "782/782 [==============================] - 11s 14ms/step - loss: 0.9112 - accuracy: 0.6831 - val_loss: 0.8275 - val_accuracy: 0.7047\n",
+      "Epoch 95/400\n",
+      "782/782 [==============================] - 11s 14ms/step - loss: 0.9103 - accuracy: 0.6821 - val_loss: 0.7900 - val_accuracy: 0.7220\n",
+      "Epoch 96/400\n",
+      "782/782 [==============================] - 11s 14ms/step - loss: 0.9013 - accuracy: 0.6854 - val_loss: 0.7970 - val_accuracy: 0.7176\n",
+      "Epoch 97/400\n",
+      "782/782 [==============================] - 11s 14ms/step - loss: 0.8965 - accuracy: 0.6874 - val_loss: 0.8178 - val_accuracy: 0.7156\n",
+      "Epoch 98/400\n",
+      "782/782 [==============================] - 11s 14ms/step - loss: 0.8966 - accuracy: 0.6875 - val_loss: 0.8142 - val_accuracy: 0.7130\n",
+      "Epoch 99/400\n",
+      "782/782 [==============================] - 11s 14ms/step - loss: 0.8911 - accuracy: 0.6906 - val_loss: 0.7989 - val_accuracy: 0.7187\n",
+      "Epoch 100/400\n",
+      "782/782 [==============================] - 11s 14ms/step - loss: 0.8938 - accuracy: 0.6906 - val_loss: 0.7767 - val_accuracy: 0.7245\n",
+      "Epoch 101/400\n",
+      "782/782 [==============================] - 11s 14ms/step - loss: 0.8905 - accuracy: 0.6908 - val_loss: 0.7913 - val_accuracy: 0.7218\n",
+      "Epoch 102/400\n",
+      "782/782 [==============================] - 11s 14ms/step - loss: 0.8919 - accuracy: 0.6903 - val_loss: 0.7630 - val_accuracy: 0.7362\n",
+      "Epoch 103/400\n",
+      "782/782 [==============================] - 11s 14ms/step - loss: 0.8789 - accuracy: 0.6952 - val_loss: 0.7850 - val_accuracy: 0.7235\n",
+      "Epoch 104/400\n",
+      "782/782 [==============================] - 12s 15ms/step - loss: 0.8827 - accuracy: 0.6944 - val_loss: 0.8069 - val_accuracy: 0.7198\n",
+      "Epoch 105/400\n",
+      "782/782 [==============================] - 12s 15ms/step - loss: 0.8706 - accuracy: 0.6957 - val_loss: 0.7812 - val_accuracy: 0.7264\n",
+      "Epoch 106/400\n",
+      "782/782 [==============================] - 11s 15ms/step - loss: 0.8749 - accuracy: 0.6976 - val_loss: 0.7964 - val_accuracy: 0.7214\n",
+      "Epoch 107/400\n",
+      "269/782 [=========>....................] - ETA: 6s - loss: 0.8559 - accuracy: 0.6985"
      ]
     }
    ],
@@ -8379,8 +8593,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "94e44164",
+   "execution_count": 59,
+   "id": "5a9fa090",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8410,8 +8624,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7af9d51f",
+   "execution_count": 60,
+   "id": "3441d48b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8455,8 +8669,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "94e57141",
+   "execution_count": 61,
+   "id": "ac0c32ba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8472,7 +8686,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "891412b6",
+   "id": "7ae60191",
    "metadata": {},
    "outputs": [],
    "source": []
