REFACT: Update notebook

--- a/notebooks/CIFAR10-Full-Notebook.ipynb
+++ b/notebooks/CIFAR10-Full-Notebook.ipynb
@@ -10,21 +10,21 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-05-30 08:46:50.281688: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "2023-05-30 11:16:05.293819: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2023-05-30 08:46:50.416836: E tensorflow/stream_executor/cuda/cuda_blas.cc:2981] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2023-05-30 08:46:50.786888: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer.so.7'; dlerror: libnvinfer.so.7: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: :/home/themandalorian/anaconda3/envs/ml-on-mc/lib/\n",
-      "2023-05-30 08:46:50.786940: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer_plugin.so.7'; dlerror: libnvinfer_plugin.so.7: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: :/home/themandalorian/anaconda3/envs/ml-on-mc/lib/\n",
-      "2023-05-30 08:46:50.786945: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Cannot dlopen some TensorRT libraries. If you would like to use Nvidia GPU with TensorRT, please make sure the missing libraries mentioned above are installed properly.\n",
-      "2023-05-30 08:46:51.717494: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "2023-05-30 11:16:05.430485: E tensorflow/stream_executor/cuda/cuda_blas.cc:2981] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2023-05-30 11:16:05.817094: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer.so.7'; dlerror: libnvinfer.so.7: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: :/home/themandalorian/anaconda3/envs/ml-on-mc/lib/\n",
+      "2023-05-30 11:16:05.817145: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer_plugin.so.7'; dlerror: libnvinfer_plugin.so.7: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: :/home/themandalorian/anaconda3/envs/ml-on-mc/lib/\n",
+      "2023-05-30 11:16:05.817150: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Cannot dlopen some TensorRT libraries. If you would like to use Nvidia GPU with TensorRT, please make sure the missing libraries mentioned above are installed properly.\n",
+      "2023-05-30 11:16:06.721981: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2023-05-30 08:46:51.757044: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-05-30 08:46:51.761827: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-05-30 08:46:51.761991: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-05-30 08:46:52.164908: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-05-30 08:46:52.165098: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-05-30 08:46:52.165231: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-05-30 08:46:52.165341: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1616] Created device /device:GPU:0 with 5702 MB memory:  -> device: 0, name: NVIDIA GeForce RTX 3070, pci bus id: 0000:07:00.0, compute capability: 8.6\n"
+      "2023-05-30 11:16:06.777001: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-05-30 11:16:06.781635: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-05-30 11:16:06.781791: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-05-30 11:16:07.202034: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-05-30 11:16:07.202217: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-05-30 11:16:07.202348: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-05-30 11:16:07.202456: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1616] Created device /device:GPU:0 with 5712 MB memory:  -> device: 0, name: NVIDIA GeForce RTX 3070, pci bus id: 0000:07:00.0, compute capability: 8.6\n"
      ]
     }
    ],
@@ -7088,7 +7088,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "db050d4a",
+   "id": "58c6ed25",
    "metadata": {},
    "outputs": [
     {
@@ -8073,7 +8073,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "02d0da69",
+   "id": "a0780f58",
    "metadata": {},
    "outputs": [
     {
@@ -8099,7 +8099,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "e7cf224e",
+   "id": "3251d7af",
    "metadata": {},
    "outputs": [
     {
@@ -8217,7 +8217,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "44600d15",
+   "id": "b7b0ffbf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8233,7 +8233,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "51ab051f",
+   "id": "83673190",
    "metadata": {},
    "outputs": [
     {
@@ -8594,7 +8594,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "5a9fa090",
+   "id": "9334f67d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8624,10 +8624,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "id": "3441d48b",
+   "execution_count": 4,
+   "id": "61914911",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "== Input details ==\n",
+      "name: serving_default_conv2d_318_input:0\n",
+      "shape: [ 1 32 32  3]\n",
+      "type: <class 'numpy.uint8'>\n",
+      "\n",
+      "== Output details ==\n",
+      "name: StatefulPartitionedCall:0\n",
+      "shape: [ 1 10]\n",
+      "type: <class 'numpy.uint8'>\n",
+      "Accuracy of model_10_tiny_Base-CubeAI_Dual_8Conv_QAT is 81.02000000000001%\n"
+     ]
+    }
+   ],
    "source": [
     "tflite_interpreter = tf.lite.Interpreter(\"model_10_tiny_Base-CubeAI_Dual_8Conv_QAT.tflite\")\n",
     "tflite_interpreter.allocate_tensors()\n",
@@ -8670,7 +8687,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "ac0c32ba",
+   "id": "d941751e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8686,7 +8703,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ae60191",
+   "id": "430bdb99",
    "metadata": {},
    "outputs": [],
    "source": []
