REFACT: Added new PTQ final models

--- a/ML-on-Microcontrollers-Final/CIFAR-10-Final-Notebook.ipynb
+++ b/ML-on-Microcontrollers-Final/CIFAR-10-Final-Notebook.ipynb
@@ -17091,7 +17091,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "df42ab41",
+   "id": "c31f7b97",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17107,7 +17107,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "05110c83",
+   "id": "7f05a94f",
    "metadata": {},
    "outputs": [
     {
@@ -17195,7 +17195,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "58cee305",
+   "id": "915529a0",
    "metadata": {},
    "outputs": [
     {
@@ -17795,7 +17795,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "05ec329c",
+   "id": "80a9eaf6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17825,7 +17825,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "0893accd",
+   "id": "a291c421",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17841,7 +17841,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "4ea778dc",
+   "id": "9a94b5e4",
    "metadata": {},
    "outputs": [
     {
@@ -17929,7 +17929,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "2a8a5f6f",
+   "id": "5df9e195",
    "metadata": {},
    "outputs": [
     {
@@ -18896,7 +18896,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "61db1175",
+   "id": "157aebd8",
    "metadata": {},
    "outputs": [
     {
@@ -18971,7 +18971,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "b0dc8534",
+   "id": "2abcee30",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18987,7 +18987,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "7581da7a",
+   "id": "e8dd4c3a",
    "metadata": {},
    "outputs": [
     {
@@ -19075,7 +19075,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "0e2cc833",
+   "id": "9ce01b51",
    "metadata": {},
    "outputs": [
     {
@@ -20032,7 +20032,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "d01bff84",
+   "id": "036d4b55",
    "metadata": {},
    "outputs": [
     {
@@ -20105,7 +20105,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "28a677b5",
+   "id": "5c1914e7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20121,7 +20121,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "fee6c269",
+   "id": "fc4af549",
    "metadata": {},
    "outputs": [
     {
@@ -20209,7 +20209,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "22fc15b4",
+   "id": "e843a776",
    "metadata": {},
    "outputs": [
     {
@@ -21119,7 +21119,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "5c951316",
+   "id": "dc3db7dc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21149,7 +21149,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "13ae7620",
+   "id": "f9d6be1b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21165,7 +21165,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "a302fca0",
+   "id": "dc620ecc",
    "metadata": {},
    "outputs": [
     {
@@ -21253,7 +21253,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "3c07bad1",
+   "id": "8336d424",
    "metadata": {},
    "outputs": [
     {
@@ -22231,7 +22231,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "91cffb8c",
+   "id": "4facf204",
    "metadata": {},
    "outputs": [
     {
@@ -22306,7 +22306,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "c40b2a9c",
+   "id": "d0d5782c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22322,7 +22322,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "1d26acae",
+   "id": "9f90c0ab",
    "metadata": {},
    "outputs": [
     {
@@ -22410,7 +22410,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "f96ac57b",
+   "id": "7d0471c6",
    "metadata": {},
    "outputs": [
     {
@@ -23371,7 +23371,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "e9ece1c2",
+   "id": "a2a2cddf",
    "metadata": {},
    "outputs": [
     {
@@ -23444,7 +23444,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "a08e6f72",
+   "id": "50be1560",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23460,7 +23460,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "43b1f4fa",
+   "id": "8982f76c",
    "metadata": {},
    "outputs": [
     {
@@ -23548,7 +23548,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d1a0b0b0",
+   "id": "de191ec0",
    "metadata": {},
    "outputs": [
     {
@@ -24397,7 +24397,63 @@
       "Epoch 369/400\n",
       "781/781 [==============================] - 15s 19ms/step - loss: 0.7176 - accuracy: 0.7582 - val_loss: 0.6555 - val_accuracy: 0.7748\n",
       "Epoch 370/400\n",
-      " 61/781 [=>............................] - ETA: 12s - loss: 0.7275 - accuracy: 0.7596"
+      "781/781 [==============================] - 14s 18ms/step - loss: 0.7257 - accuracy: 0.7558 - val_loss: 0.6354 - val_accuracy: 0.7842\n",
+      "Epoch 371/400\n",
+      "781/781 [==============================] - 14s 17ms/step - loss: 0.7186 - accuracy: 0.7572 - val_loss: 0.6256 - val_accuracy: 0.7860\n",
+      "Epoch 372/400\n",
+      "781/781 [==============================] - 14s 18ms/step - loss: 0.7178 - accuracy: 0.7597 - val_loss: 0.6463 - val_accuracy: 0.7764\n",
+      "Epoch 373/400\n",
+      "781/781 [==============================] - 15s 19ms/step - loss: 0.7153 - accuracy: 0.7576 - val_loss: 0.6490 - val_accuracy: 0.7765\n",
+      "Epoch 374/400\n",
+      "781/781 [==============================] - 15s 19ms/step - loss: 0.7197 - accuracy: 0.7570 - val_loss: 0.6261 - val_accuracy: 0.7838\n",
+      "Epoch 375/400\n",
+      "781/781 [==============================] - 16s 20ms/step - loss: 0.7133 - accuracy: 0.7603 - val_loss: 0.6019 - val_accuracy: 0.7951\n",
+      "Epoch 376/400\n",
+      "781/781 [==============================] - 14s 18ms/step - loss: 0.7213 - accuracy: 0.7600 - val_loss: 0.6666 - val_accuracy: 0.7736\n",
+      "Epoch 377/400\n",
+      "781/781 [==============================] - 15s 19ms/step - loss: 0.7218 - accuracy: 0.7582 - val_loss: 0.6213 - val_accuracy: 0.7854\n",
+      "Epoch 378/400\n",
+      "781/781 [==============================] - 14s 18ms/step - loss: 0.7121 - accuracy: 0.7603 - val_loss: 0.6240 - val_accuracy: 0.7851\n",
+      "Epoch 379/400\n",
+      "781/781 [==============================] - 14s 18ms/step - loss: 0.7196 - accuracy: 0.7575 - val_loss: 0.6043 - val_accuracy: 0.7964\n",
+      "Epoch 380/400\n",
+      "781/781 [==============================] - 15s 19ms/step - loss: 0.7215 - accuracy: 0.7595 - val_loss: 0.6726 - val_accuracy: 0.7671\n",
+      "Epoch 381/400\n",
+      "781/781 [==============================] - 14s 18ms/step - loss: 0.7195 - accuracy: 0.7579 - val_loss: 0.6507 - val_accuracy: 0.7741\n",
+      "Epoch 382/400\n",
+      "781/781 [==============================] - 14s 18ms/step - loss: 0.7121 - accuracy: 0.7591 - val_loss: 0.6863 - val_accuracy: 0.7692\n",
+      "Epoch 383/400\n",
+      "781/781 [==============================] - 14s 18ms/step - loss: 0.7147 - accuracy: 0.7598 - val_loss: 0.6694 - val_accuracy: 0.7740\n",
+      "Epoch 384/400\n",
+      "781/781 [==============================] - 14s 18ms/step - loss: 0.7202 - accuracy: 0.7587 - val_loss: 0.6266 - val_accuracy: 0.7847\n",
+      "Epoch 385/400\n",
+      "781/781 [==============================] - 14s 18ms/step - loss: 0.7123 - accuracy: 0.7608 - val_loss: 0.6357 - val_accuracy: 0.7805\n",
+      "Epoch 386/400\n",
+      "781/781 [==============================] - 14s 18ms/step - loss: 0.7121 - accuracy: 0.7608 - val_loss: 0.6194 - val_accuracy: 0.7873\n",
+      "Epoch 387/400\n",
+      "781/781 [==============================] - 14s 18ms/step - loss: 0.7098 - accuracy: 0.7626 - val_loss: 0.6042 - val_accuracy: 0.7923\n",
+      "Epoch 388/400\n",
+      "781/781 [==============================] - 15s 19ms/step - loss: 0.7140 - accuracy: 0.7591 - val_loss: 0.6200 - val_accuracy: 0.7907\n",
+      "Epoch 389/400\n",
+      "781/781 [==============================] - 14s 18ms/step - loss: 0.7115 - accuracy: 0.7605 - val_loss: 0.6636 - val_accuracy: 0.7728\n",
+      "Epoch 390/400\n",
+      "781/781 [==============================] - 14s 18ms/step - loss: 0.7068 - accuracy: 0.7624 - val_loss: 0.6129 - val_accuracy: 0.7902\n",
+      "Epoch 391/400\n",
+      "781/781 [==============================] - 15s 19ms/step - loss: 0.7136 - accuracy: 0.7622 - val_loss: 0.6273 - val_accuracy: 0.7894\n",
+      "Epoch 392/400\n",
+      "781/781 [==============================] - 14s 18ms/step - loss: 0.7140 - accuracy: 0.7602 - val_loss: 0.5892 - val_accuracy: 0.8006\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 393/400\n",
+      "781/781 [==============================] - 14s 18ms/step - loss: 0.7104 - accuracy: 0.7604 - val_loss: 0.6086 - val_accuracy: 0.7911\n",
+      "Epoch 394/400\n",
+      "781/781 [==============================] - 14s 18ms/step - loss: 0.7019 - accuracy: 0.7640 - val_loss: 0.6604 - val_accuracy: 0.7739\n",
+      "Epoch 395/400\n",
+      " 43/781 [>.............................] - ETA: 13s - loss: 0.7082 - accuracy: 0.7565"
      ]
     }
    ],
@@ -24443,7 +24499,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc3f330e",
+   "id": "ea4c3c2a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24473,7 +24529,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f1640161",
+   "id": "df117c1b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24489,7 +24545,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93ce7f53",
+   "id": "dd443a95",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24539,7 +24595,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f17bb99e",
+   "id": "2f200507",
    "metadata": {},
    "outputs": [],
    "source": []
